RESOLVED FIXED196941
URL set by document.open() is not communicated to the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=196941
Summary URL set by document.open() is not communicated to the UIProcess
Chris Dumez
Reported 2019-04-15 15:23:37 PDT
URL set by document.open() is not communicated to the UIProcess and thus not reflected via WKWebView.URL.
Attachments
Patch (17.43 KB, patch)
2019-04-15 15:27 PDT, Chris Dumez
no flags
Patch (17.33 KB, patch)
2019-04-16 13:51 PDT, Chris Dumez
no flags
Patch (17.39 KB, patch)
2019-04-16 16:06 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-04-15 15:23:54 PDT
Chris Dumez
Comment 2 2019-04-15 15:27:20 PDT
EWS Watchlist
Comment 3 2019-04-15 15:30:03 PDT
Attachment 367466 [details] did not pass style-queue: ERROR: Source/WebCore/loader/FrameLoaderClient.h:184: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4 2019-04-15 17:08:13 PDT
Comment on attachment 367466 [details] Patch r=me
WebKit Commit Bot
Comment 5 2019-04-15 19:01:37 PDT
Comment on attachment 367466 [details] Patch Clearing flags on attachment: 367466 Committed r244321: <https://trac.webkit.org/changeset/244321>
WebKit Commit Bot
Comment 6 2019-04-15 19:01:39 PDT
All reviewed patches have been landed. Closing bug.
Shawn Roberts
Comment 7 2019-04-16 09:00:55 PDT
After changes in https://trac.webkit.org/changeset/244321 Mac WK2 Debug queues are exiting early after 50 crashes. https://build.webkit.org/builders/Apple%20Mojave%20Debug%20WK2%20%28Tests%29/builds/2315 ASSERTION FAILED: m_uncommittedState.state == State::Committed /Volumes/Data/slave/mojave-debug/build/Source/WebKit/UIProcess/PageLoadState.cpp(307) : void WebKit::PageLoadState::didFinishLoad(const Transaction::Token &) 1 0x10406ada9 WTFCrash 2 0x10d125b5b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x10d9fbb4d WebKit::PageLoadState::didFinishLoad(WebKit::PageLoadState::Transaction::Token const&) 4 0x10dbb8ff2 WebKit::WebPageProxy::didFinishLoadForFrame(unsigned long long, unsigned long long, WebKit::UserData const&) https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK2%20(Tests)/r244328%20(2319)/dom/html/level1/core/documentinvalidcharacterexceptioncreatepi1-crash-log.txt
Shawn Roberts
Comment 8 2019-04-16 09:21:33 PDT
WebKit Commit Bot
Comment 9 2019-04-16 09:25:52 PDT
Re-opened since this is blocked by bug 196968
Chris Dumez
Comment 10 2019-04-16 13:51:05 PDT
EWS Watchlist
Comment 11 2019-04-16 13:55:25 PDT
Attachment 367564 [details] did not pass style-queue: ERROR: Source/WebCore/loader/FrameLoaderClient.h:184: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 12 2019-04-16 14:49:18 PDT
Comment on attachment 367564 [details] Patch Rejecting attachment 367564 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 367564, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/11890540
Chris Dumez
Comment 13 2019-04-16 16:06:31 PDT
Chris Dumez
Comment 14 2019-04-16 16:07:39 PDT
Comment on attachment 367589 [details] Patch Clearing flags on attachment: 367589 Committed r244361: <https://trac.webkit.org/changeset/244361>
Chris Dumez
Comment 15 2019-04-16 16:07:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.